# echtvar

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config  config.toml
.github/workflows/: build.yml  ci.yml
examples/: gnomad.v3.1.2.json
examples/CSQ-fields/: README.md  gene.json  generate-all-snps.py  impact.json  run.sh  test-self-impact.py
examples/cadd/: README.md  cadd.json  cadd2vcf.py  check.py  run.sh
paper/: Dockerfile  echtvar-paper.sh  icgc.sh  plot-icgc.py  plot-times.py  small-set.sh
paper/compare/: bcftools-time.txt  echtvar-time.txt  slivar-time.txt  varnote-time.txt
scripts/: dbnsfp.py  dbscsnv.py
src/: main.rs
src/commands/: annotate_cmd.rs  bed_annotate_cmd.rs  encoder_cmd.rs  mod.rs  tab_annotate_cmd.rs
src/lib/: echtvar.rs  fields.rs  kmer16.rs  mod.rs  var32.rs  zigzag.rs
tests/: .gitignore  big.sh  check-string-for-issue33.py  check-string-for-issue8.py  check-string.py  check.py  make-string-test-for-issue8.py  make-string-vcf.py  make-vcf.py  string.hjson  string.sh  test.hjson  test0.hjson  test1.hjson
