[package]
name = "echtvar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "echtvar_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "echtvar"
path = "src/main.rs"



[dependencies]

flate2 = { version = "1.0", features = ["zlib-ng-compat"]}

rust-htslib = { version = "*", features = ["libdeflate"] }
#bitpacking = "0.8.4"
stream-vbyte = {version = "0.4.0", features=["x86_ssse3", "x86_sse41"]}
clap = {version = "~2.27.0", features=["suggestions"] }
c2rust-bitfields = "0.3.0"
libc = "*"
# TODO: try deflate-miniz, deflate-zlib, deflate
zip = { version = "0.5", default-features = false, features=["deflate"] }
byteorder = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "*"

fasteval = { version = "0.2.4", features= ["unsafe-vars"]}

bincode = { version = "1.3.3" }

[profile.release]
lto = "fat"
codegen-units = 1
target = "x86_64"
