[package]
name = "echtvar"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "echtvar_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "echtvar"
path = "src/main.rs"


[dependencies]
rust-htslib = { version = "0.38.2", features = ["libdeflate", "static"] }
#bitpacking = "0.8.4"
stream-vbyte = { version = "0.4.1", features = ["x86_ssse3", "x86_sse41"] }
clap = { version = "~2.27.0", features = ["suggestions"] }
c2rust-bitfields = "0.3.0"
libc = "*"
# TODO: try deflate-miniz, deflate-zlib, deflate
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
byteorder = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

fasteval = { version = "0.2.4", features = ["unsafe-vars"] }

bincode = { version = "1.3.3" }
json5 = "0.4.1"

ieee754 = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
